# wynad

./: LICENSE  README.md  cabal.project  wynad.cabal
app/: Main.hs
src/: Wynad.hs
src/Wynad/: Config.hs  Core.hs  Layout.hs  ManageHook.hs  Operations.hs  StackSet.hs
src/Wynad/Wayland/: Backend.hs  Decorations.hs  Input.hs  Keyboard.hs  Output.hs  Scene.hs  Surface.hs  Types.hs
src/Wynad/Wayland/Protocols/: LayerShell.hs  XdgShell.hs
tests/: Main.hs  StackSetSpec.hs
